@@ -1,7 +1,6 @@
 module Mensam.API.Data.User where
 
 import Mensam.API.Aeson
-import Mensam.API.Data.User.Username
 
 import Data.Aeson qualified as A
 import Data.Int
@@ -11,7 +10,6 @@ import Data.Time qualified as T
 import Deriving.Aeson qualified as A
 import GHC.Generics
 import Text.Email.OrphanInstances ()
-import Text.Email.Parser
 
 type UserAuthenticated :: Type
 data UserAuthenticated = MkUserAuthenticated
@@ -22,17 +20,6 @@ data UserAuthenticated = MkUserAuthenticated
   deriving
     (A.FromJSON, A.ToJSON)
     via A.CustomJSON (JSONSettings "Mk" "userAuthenticated") UserAuthenticated
-
-type User :: Type
-data User = MkUser
-  { userId :: IdentifierUser
-  , userName :: Username
-  , userEmail :: EmailAddress
-  }
-  deriving stock (Eq, Generic, Ord, Read, Show)
-  deriving
-    (A.FromJSON, A.ToJSON)
-    via A.CustomJSON (JSONSettings "Mk" "user") User
 
 type IdentifierUser :: Type
 newtype IdentifierUser = MkIdentifierUser {unIdentifierUser :: Int64}
