@@ -5,6 +5,7 @@
 * API
   ** HTTP 403 responses now contain the missing permission.
   ** Add space users to `/space/view/` response.
+  ** Only show email address when allowed in `/profile` response.
 
 == `0.6.0.1`
 
